<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="pt.hventura.loadapp.chooseFile.MainViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".chooseFile.MainActivity"
        tools:showIn="@layout/activity_main">

        <ImageView
            android:id="@+id/topImage"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="@string/image_description"
            android:src="@drawable/ic_download"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/iconsAttribution"
            style="@style/AttributionText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/raleway"
            android:gravity="end"
            android:text="@string/icon_attribution"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/topImage" />


        <RadioGroup
            android:id="@+id/downloadOption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iconsAttribution">

            <RadioButton
                android:id="@+id/option1"
                style="@style/TextNormal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/small_margin"
                android:text="@string/option1_text" />

            <RadioButton
                android:id="@+id/option2"
                style="@style/TextNormal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/small_margin"
                android:text="@string/option2_text" />

            <RadioButton
                android:id="@+id/option3"
                style="@style/TextNormal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/small_margin"
                android:text="@string/option3_text" />

        </RadioGroup>

        <RelativeLayout
            android:id="@+id/middleORtext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            app:layout_constraintTop_toBottomOf="@id/downloadOption"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/tvText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/or"
                android:textColor="@color/colorPrimaryDark"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="16dp"
                android:layout_toStartOf="@id/tvText"
                android:background="@color/black" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_centerVertical="true"
                android:layout_marginEnd="16dp"
                android:layout_toEndOf="@id/tvText"
                android:background="@color/black" />

        </RelativeLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/customUrl"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/large_margin"
            android:hint="@string/custom_url_field"
            app:endIconMode="clear_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/downloadOption"
            app:startIconDrawable="@drawable/ic_link">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/customUrlValue"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textUri" />

        </com.google.android.material.textfield.TextInputLayout>

        <pt.hventura.loadapp.ui.LoadingButton
            android:id="@+id/custom_button"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>